1.gateway 删除认证相关内容